--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,19 +6,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(./include)
 
 set(SOURCE_FILES
-        include/exceptions.h
         include/http_content_type.h
         include/http_headers.h
-        include/http_request.h
-        include/http_server.h
-        include/non_copyable.h
         include/static_counter.h
         include/string_constant.h
-        include/tools.h
         include/type_registry.h
 
         src/main.cpp
         src/http_server.cpp
+        src/http_request.cpp
 )
 
 add_executable(chudoserver ${SOURCE_FILES})
