--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
     "server-port": 5555,
     "threads-count": 4,
     "default-page": "index.html",
-    "root-dir": "/home/roman/projects/cpp/learn-network/libevent_test_http_srv/test_content",
+    "root-dir": "/var/www/html",
     "is-debug": true
 }
