--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "server-ip": "127.0.0.1",
     "server-port": 5555,
-    "threads-count": 1,
+    "threads-count": 3,
     "default-page": "index.html",
     "root-dir": "/var/www/html",
-    "logging-enable": true,
+    "logging-enable": false,
 
     "cache-enable": false,
     "memcached-server-port": 11211
