proj_defs.in.h file added; USE_BOOST_FILEPATH define added; boost getfilepath functionality added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,24 @@ set(SOURCE_FILES
         src/tools.cpp
 )
 
+set(USE_BOOST_FILEPATH false) # true/false
+set(ADD_MY_BOOST_LIBS)
+if (USE_BOOST_FILEPATH)
+    set(ADD_MY_BOOST_LIBS filesystem system)
+endif ()
 
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.36.0 COMPONENTS )
-if(Boost_FOUND)
+find_package(Boost 1.36.0 COMPONENTS ${ADD_MY_BOOST_LIBS})
+if (Boost_FOUND)
+    configure_file(
+            "${PROJECT_SOURCE_DIR}/proj_defs.h.in"
+            "${PROJECT_BINARY_DIR}/proj_defs.h"
+    )
+    include_directories("${PROJECT_BINARY_DIR}")
+
     include_directories(${Boost_INCLUDE_DIRS})
     add_executable(smallhttpserver ${SOURCE_FILES})
     target_link_libraries(smallhttpserver LINK_PUBLIC ${Boost_LIBRARIES} -levent -lpthread -lmemcached)
-endif()
+endif ()
