--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,6 @@ if (Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     add_executable(smallhttpserver ${SOURCE_FILES})
     target_link_libraries(smallhttpserver LINK_PUBLIC ${Boost_LIBRARIES} -levent -lpthread -lmemcached)
+else()
+    message(FATAL_ERROR "Boost library not found, CMake will exit.")
 endif ()
