--- a/config.json
+++ b/config.json
@@ -7,5 +7,77 @@
     "logging-enable": true,
 
     "cache-enable": false,
-    "memcached-server-port": 11211
+    "memcached-server-port": 11211,
+
+
+    "extension-contenttype": [
+        { "ext": "bin", "type": "application/octet-stream" },
+        { "ext": "oda", "type": "application/oda" },
+        { "ext": "pdf", "type": "application/pdf" },
+        { "ext": "ai", "type": "application/postscript" },
+        { "ext": "eps", "type": "application/postscript" },
+        { "ext": "ps", "type": "application/postscript" },
+        { "ext": "rtf", "type": "application/rtf" },
+        { "ext": "mif", "type": "application/x-mif" },
+        { "ext": "csh", "type": "application/x-csh" },
+        { "ext": "dvi", "type": "application/x-dvi" },
+        { "ext": "hdf", "type": "application/x-hdf" },
+        { "ext": "latex", "type": "application/x-latex" },
+        { "ext": "nc", "type": "application/x-netcdf" },
+        { "ext": "cdf", "type": "application/x-netcdf" },
+        { "ext": "sh", "type": "application/x-sh" },
+        { "ext": "tcl", "type": "application/x-tcl" },
+        { "ext": "tex", "type": "application/x-tex" },
+        { "ext": "texinfo", "type": "application/x-texinfo" },
+        { "ext": "texi", "type": "application/x-texinfo" },
+        { "ext": "roff", "type": "application/x-troff" },
+        { "ext": "man", "type": "application/x-troff-man" },
+        { "ext": "me", "type": "application/x-troff-me" },
+        { "ext": "ms", "type": "application/x-troff-ms" },
+        { "ext": "src", "type": "application/x-wais-source" },
+        { "ext": "zip", "type": "application/zip" },
+        { "ext": "bcpio", "type": "application/x-bcpio" },
+        { "ext": "cpio", "type": "application/x-cpio" },
+        { "ext": "gtar", "type": "application/x-gtar" },
+        { "ext": "shar", "type": "application/x-shar" },
+        { "ext": "sv4cpio", "type": "application/x-sv4cpio" },
+        { "ext": "sv4crc", "type": "application/x-sv4crc" },
+        { "ext": "tar", "type": "application/x-tar" },
+        { "ext": "ustar", "type": "application/x-ustar" },
+        { "ext": "au", "type": "audio/basic" },
+        { "ext": "snd", "type": "audio/basic" },
+        { "ext": "aif", "type": "audio/x-aiff" },
+        { "ext": "aiff", "type": "audio/x-aiff" },
+        { "ext": "aifc", "type": "audio/x-aiff" },
+        { "ext": "wav", "type": "audio/x-wav" },
+        { "ext": "gif", "type": "image/gif" },
+        { "ext": "ief", "type": "image/ief" },
+        { "ext": "jpeg", "type": "image/jpeg" },
+        { "ext": "jpg", "type": "image/jpeg" },
+        { "ext": "jpe", "type": "image/jpeg" },
+        { "ext": "tiff", "type": "image/tiff" },
+        { "ext": "tif", "type": "image/tiff" },
+        { "ext": "ras", "type": "image/x-cmu-raster" },
+        { "ext": "pnm", "type": "image/x-portable-anymap" },
+        { "ext": "pbm", "type": "image/x-portable-bitmap" },
+        { "ext": "pgm", "type": "image/x-portable-graymap" },
+        { "ext": "ppm", "type": "image/x-portable-pixmap" },
+        { "ext": "png", "type": "image/png" },
+        { "ext": "rgb", "type": "image/x-rgb" },
+        { "ext": "xbm", "type": "image/x-xbitmap" },
+        { "ext": "xpm", "type": "image/x-xpixmap" },
+        { "ext": "xwd", "type": "image/x-xwindowdump" },
+        { "ext": "html", "type": "text/html" },
+        { "ext": "txt", "type": "text/plain" },
+        { "ext": "rtx", "type": "text/richtext" },
+        { "ext": "tsv", "type": "text/tab-separated-values" },
+        { "ext": "ext", "type": "text/x-setext" },
+        { "ext": "mpeg", "type": "video/mpeg" },
+        { "ext": "mpg", "type": "video/mpeg" },
+        { "ext": "mpe", "type": "video/mpeg" },
+        { "ext": "qt", "type": "video/quicktime" },
+        { "ext": "mov", "type": "video/quicktime" },
+        { "ext": "avi", "type": "video/x-msvideo" },
+        { "ext": "movie", "type": "video/x-sgi-movie" }
+    ]
 }
