--- a/proj_defs.h.in
+++ b/proj_defs.h.in
@@ -2,5 +2,6 @@
 #define __PROJ_DEFS_H__
 
 #define USE_BOOST_FILEPATH @USE_BOOST_FILEPATH@
+#define DAEMON_NAME "@DAEMON_NAME@"
 
 #endif // __PROJ_DEFS_H__
